--- a/devel/programming/languages/php/PEAR/PEAR-Log/pspec.xml
+++ b/devel/programming/languages/php/PEAR/PEAR-Log/pspec.xml
@@ -11,7 +11,7 @@
         <License>PHP</License>
         <IsA>library</IsA>
         <Summary>Logging utilities</Summary>
-        <Archive sha1sum="134819191af06402c8dd73dac663186c473bfcd5" type="targz">http://download.pear.php.net/package/Log-1.10.1.tgz</Archive>
+        <Archive sha1sum="eb0f29ec13a0c300f451a49f26a7df6e3cc23c55" type="targz">http://download.pear.php.net/package/Log-1.11.0.tgz</Archive>
     </Source>
 
     <Package>
@@ -29,6 +29,13 @@
     </Package>
 
     <History>
+        <Update release="6">
+            <Date>2008-06-15</Date>
+            <Version>1.11.0</Version>
+            <Comment>Version bump.</Comment>
+            <Name>Eren Türkay</Name>
+            <Email>turkay.eren@gmail.com</Email>
+        </Update>
         <Update release="5">
             <Date>2008-05-08</Date>
             <Version>1.10.1</Version>
