--- a/devel/programming/languages/perl/perl-ExtUtils-Depends/pspec.xml
+++ b/devel/programming/languages/perl/perl-ExtUtils-Depends/pspec.xml
@@ -12,7 +12,7 @@
         <IsA>library</IsA>
         <Summary>A library for easily build XS extensions that depend on XS extensions</Summary>
         <Description>This module tries to make it easy to build Perl extensions that use functions and typemaps provided by other perl extensions.</Description>
-        <Archive sha1sum="58a2a648731060ba333517d7a93eaf47a87a291a" type="targz">mirrors://cpan/authors/id/R/RM/RMCFARLA/Gtk2-Perl/ExtUtils-Depends-0.205.tar.gz</Archive>
+        <Archive sha1sum="c21300397e5ffbb5861a6dbf294eddd4b4104411" type="targz">mirrors://sourceforge/gtk2-perl/ExtUtils-Depends-0.300.tar.gz</Archive>
         <BuildDependencies>
             <Dependency>perl</Dependency>
         </BuildDependencies>
@@ -33,6 +33,13 @@
     </Package>
 
     <History>
+        <Update release="2">
+            <Date>2008-06-26</Date>
+            <Version>0.300</Version>
+            <Comment>Version bump.</Comment>
+            <Name>Jérôme Scneider</Name>
+            <Email>jerome.schneider@gmail.com</Email>
+        </Update>
         <Update release="1">
             <Date>2006-11-05</Date>
             <Version>0.205</Version>
