--- a/devel/programming/languages/perl/perl-Cairo/pspec.xml
+++ b/devel/programming/languages/perl/perl-Cairo/pspec.xml
@@ -12,7 +12,7 @@
         <IsA>library</IsA>
         <Summary>Perl bindings to the cairo graphics library</Summary>
         <Description>Cairo provides Perl bindings for the vector graphics library cairo. It supports multiple output targets, including PNG, PDF and SVG. Cairo produces identical output on all those targets.</Description>
-        <Archive sha1sum="ddfc89d0c21d2d7afd508bb39e3774cff8a48280" type="targz">mirrors://sourceforge/gtk2-perl/Cairo-1.045.tar.gz</Archive>
+        <Archive sha1sum="af0334d7732f991509c0b90e509040d4bbd2b939" type="targz">mirrors://sourceforge/gtk2-perl/Cairo-1.060.tar.gz</Archive>
         <BuildDependencies>
             <Dependency>perl-ExtUtils-Depends</Dependency>
             <Dependency>perl-ExtUtils-PkgConfig</Dependency>
@@ -37,6 +37,13 @@
     </Package>
 
     <History>
+        <Update release="2">
+            <Date>2008-06-27</Date>
+            <Version>1.060</Version>
+            <Comment>Version bump.</Comment>
+            <Name>Jérôme Schneider</Name>
+            <Email>jerome.schneider@gmail.com</Email>
+        </Update>
         <Update release="1">
             <Date>2008-01-30</Date>
             <Version>1.045</Version>
