--- a/devel/programming/languages/perl/perl-Glib/pspec.xml
+++ b/devel/programming/languages/perl/perl-Glib/pspec.xml
@@ -12,7 +12,7 @@
         <IsA>library</IsA>
         <Summary>Perl wrappers for the GLib utility and Object libraries</Summary>
         <Description>This module provides perl access to Glib and GLib's GObject libraries. GLib is a portability and utility library; GObject provides a generic type system with inheritance and a powerful signal system.  Together these libraries are used as the foundation for many of the libraries that make up the Gnome environment, and are used in many unrelated projects.</Description>
-        <Archive sha1sum="a20ed6460720c87375355ddb7249f84f6ca9bb7b" type="targz">mirrors://sourceforge/gtk2-perl/Glib-1.164.tar.gz</Archive>
+        <Archive sha1sum="c0cbe4212db75bb33d174a9499d39c3f0dad0559" type="targz">mirrors://sourceforge/gtk2-perl/Glib-1.183.tar.gz</Archive>
         <BuildDependencies>
             <Dependency>perl-ExtUtils-Depends</Dependency>
             <Dependency>perl-ExtUtils-PkgConfig</Dependency>
@@ -32,6 +32,13 @@
     </Package>
 
     <History>
+        <Update release="2">
+            <Date>2008-06-30</Date>
+            <Version>1.183</Version>
+            <Comment>Version bump.</Comment>
+            <Name>Jérôme Schneider</Name>
+            <Email>jerome.schneider@gmail.com</Email>
+        </Update>
         <Update release="1">
             <Date>2008-01-30</Date>
             <Version>1.164</Version>
