--- a/devel/programming/languages/perl/perl-Gtk2/pspec.xml
+++ b/devel/programming/languages/perl/perl-Gtk2/pspec.xml
@@ -12,7 +12,7 @@
         <IsA>library</IsA>
         <Summary>Perl interface to the 2.x series of the Gimp Toolkit library</Summary>
         <Description>gtk2-perl is the collective name for a set of perl bindings for Gtk+ 2.x and various related libraries. These modules make it easy to write Gtk and Gnome applications using a natural, perlish, object-oriented syntax.</Description>
-        <Archive sha1sum="e2c147b412aecbe87983e317461e0997b2a7148a" type="targz">mirrors://sourceforge/gtk2-perl/Gtk2-1.164.tar.gz</Archive>
+        <Archive sha1sum="f2d9293b7f59afa47692d43e9567783b82a81563" type="targz">mirrors://sourceforge/gtk2-perl/Gtk2-1.183.tar.gz</Archive>
         <BuildDependencies>
             <Dependency>perl-Cairo</Dependency>
             <Dependency>perl-ExtUtils-Depends</Dependency>
@@ -40,6 +40,13 @@
     </Package>
 
     <History>
+        <Update release="2">
+            <Date>2008-06-30</Date>
+            <Version>1.183</Version>
+            <Comment>Version bump.</Comment>
+            <Name>Jérôme Schneider</Name>
+            <Email>jerome.schneider@gmail.com</Email>
+        </Update>
         <Update release="1">
             <Date>2008-01-30</Date>
             <Version>1.164</Version>
