--- a/devel/programming/languages/python/python-mpd/pspec.xml
+++ b/devel/programming/languages/python/python-mpd/pspec.xml
@@ -11,7 +11,7 @@
         <License>GPLv3</License>
         <IsA>library</IsA>
         <Summary>An MPD (Music Player Daemon) client library written in pure Python.</Summary>
-        <Archive sha1sum="8f3d5b389aac996ca69b51b59473232164e4bcde" type="tarbz2">http://pypi.python.org/packages/source/p/python-mpd/python-mpd-0.2.0.tar.bz2</Archive>
+        <Archive sha1sum="55961e2052fc0b59d8d6de34f5c391818868d874" type="tarbz2">http://pypi.python.org/packages/source/p/python-mpd/python-mpd-0.2.1.tar.bz2</Archive>
     </Source>
 
     <Package>
@@ -23,6 +23,13 @@
     </Package>
 
     <History>
+        <Update release="2">
+            <Date>2008-07-03</Date>
+            <Version>0.2.1</Version>
+            <Comment>Version bump.</Comment>
+            <Name>Gökmen Görgen</Name>
+            <Email>gkmngrgn@gmail.com</Email>
+        </Update>
         <Update release="1">
             <Date>2008-04-08</Date>
             <Version>0.2.0</Version>
@@ -32,4 +39,3 @@
         </Update>
     </History>
 </PISI>
-
