--- a/devel/programming/languages/python/pyro/pspec.xml
+++ b/devel/programming/languages/python/pyro/pspec.xml
@@ -24,7 +24,7 @@
         <RuntimeDependencies>
             <Dependency releaseFrom="17">comar-api</Dependency>
             <Dependency>python-tk</Dependency>
-            <Dependency>wxPython2_8</Dependency>
+            <Dependency>wxPython</Dependency>
         </RuntimeDependencies>
         <Files>
             <Path fileType="executable">/usr/bin</Path>
