--- a/2008/programming/languages/python/wxPython/translations.xml
+++ b/2008/programming/languages/python/wxPython/translations.xml
@@ -1,7 +1,7 @@
 <?xml version="1.0" ?>
 <PISI>
     <Source>
-        <Name>wxPython2_8</Name>
-        <Summary xml:lang="tr">wxGTK 2.8.x için Python bağlayıcıları.</Summary>
+        <Name>wxPython</Name>
+        <Summary xml:lang="tr">wxGTK için Python bağlayıcıları.</Summary>
     </Source>
 </PISI>
