--- a/2008/programming/languages/python/wxPython/pspec.xml
+++ b/2008/programming/languages/python/wxPython/pspec.xml
@@ -11,13 +11,10 @@
         <License>wxWinLL-3</License>
         <IsA>library</IsA>
         <Summary>Python bindings for wxGTK</Summary>
-        <Archive sha1sum="5526ee4c4cc57bcebb4950ea05e24639ef8b02dd" type="tarbz2">mirrors://sourceforge/wxpython/wxPython-src-2.8.7.1.tar.bz2</Archive>
+        <Archive sha1sum="96027778c9d8dbfbc08a1aecb2dbe358b947b897" type="tarbz2">mirrors://sourceforge/wxpython/wxPython-src-2.8.8.1.tar.bz2</Archive>
         <BuildDependencies>
             <Dependency>wxGTK</Dependency>
         </BuildDependencies>
-        <Patches>
-            <Patch level="2">wxPython-src-2.8.7.1-bug450073.patch</Patch>
-        </Patches>
     </Source>
 
     <Package>
@@ -37,6 +34,13 @@
     </Package>
 
     <History>
+        <Update release="4">
+            <Date>2008-07-26</Date>
+            <Version>2.8.8.1</Version>
+            <Comment>Version bump</Comment>
+            <Name>Fatih Aşıcı</Name>
+            <Email>fatih@pardus.org.tr</Email>
+        </Update>
         <Update release="3">
             <Date>2008-07-12</Date>
             <Version>2.8.7.1</Version>
