thanks to turker sezer =)

--- a/devel/programming/languages/python/python-gammu/pspec.xml
+++ b/devel/programming/languages/python/python-gammu/pspec.xml
@@ -29,6 +29,13 @@
     </Package>
 
     <History>
+        <Update release="3">
+            <Date>2008-08-04</Date>
+            <Version>0.26</Version>
+            <Comment>build fix</Comment>
+            <Name>Pınar Yanardağ</Name>
+            <Email>pinar@pardus.org.tr</Email>
+        </Update>
         <Update release="2">
             <Date>2008-04-11</Date>
             <Version>0.26</Version>
