--- a/devel/programming/languages/java/sun-jaf/pspec.xml
+++ b/devel/programming/languages/java/sun-jaf/pspec.xml
@@ -11,7 +11,7 @@
         <License>CDDL</License>
         <IsA>library</IsA>
         <Summary>Sun's JavaBeans Activation Framework (JAF)</Summary>
-        <Archive sha1sum="5beb2a91e2f2f059cb2e4bd930b1acb6b538ebfb" type="tarbz2">http://cekirdek.pardus.org.tr/~ismail/dist/sun-jaf-1.1.tar.bz2</Archive>
+        <Archive sha1sum="ce547d5bf929d1e318cc8559426db1e871aeabc8" type="zip">http://cekirdek.pardus.org.tr/~semen/jaf-1_1_1.zip</Archive>
         <BuildDependencies>
             <Dependency>sun-jdk</Dependency>
             <Dependency>ant</Dependency>
@@ -25,10 +25,18 @@
         </RuntimeDependencies>
         <Files>
             <Path fileType="library">/usr/share/java</Path>
+            <Path fileType="doc">/usr/share/doc</Path>
         </Files>
     </Package>
 
     <History>
+        <Update release="2">
+            <Date>2008-08-28</Date>
+            <Version>1.1.1</Version>
+            <Comment>Version bump</Comment>
+            <Name>Semen Cirit</Name>
+            <Email>semen@pardus.org.tr</Email>
+        </Update>
         <Update release="1">
             <Date>2007-03-28</Date>
             <Version>1.1</Version>
