--- a/devel/programming/languages/java/sun-javamail/pspec.xml
+++ b/devel/programming/languages/java/sun-javamail/pspec.xml
@@ -11,7 +11,7 @@
         <License>CDDL</License>
         <IsA>library</IsA>
         <Summary>A Java-based framework to build multiplatform mail and messaging applications</Summary>
-        <Archive sha1sum="2aa4e91a0e82c2e2a709e1a73b30ad9b25f7e3bf" type="tarbz2">http://cekirdek.pardus.org.tr/~ismail/dist/sun-javamail-1.4.tar.bz2</Archive>
+        <Archive sha1sum="a570f0340765013fec6cc14d11315f65fe528e2b" type="zip">http://cekirdek.pardus.org.tr/~semen/javamail-1_4_1.zip</Archive>
         <BuildDependencies>
             <Dependency>sun-jdk</Dependency>
             <Dependency>ant</Dependency>
@@ -31,6 +31,13 @@
     </Package>
 
     <History>
+        <Update release="2">
+            <Date>2008-08-28</Date>
+            <Version>1.4.1</Version>
+            <Comment>Version bump</Comment>
+            <Name>Semen Cirit</Name>
+            <Email>semen@pardus.org.tr</Email>
+        </Update>
         <Update release="1">
             <Date>2007-03-28</Date>
             <Version>1.4</Version>
