--- a/devel/programming/languages/python/pyfits/pspec.xml
+++ b/devel/programming/languages/python/pyfits/pspec.xml
@@ -12,9 +12,8 @@
         <IsA>library</IsA>
         <Summary>PyFITS provides an interface to FITS formatted files under the Python scripting language and PyRAF, the Python-based interface to IRAF.</Summary>
         <Description>PyFITS provides an interface to FITS formatted files under the Python scripting language and PyRAF, the Python-based interface to IRAF.</Description>
-        <Archive sha1sum="7da81e8098545b8148a2f23c9f597bcc3a90440c" type="targz">http://www.stsci.edu/resources/software_hardware/pyfits/pyfits-1.1.tar.gz</Archive>
+        <Archive sha1sum="280f29e2ae4b7ded3cb44fc545e8c7217266fbc4" type="targz">http://www.stsci.edu/resources/software_hardware/pyfits/pyfits-1.3.tar.gz</Archive>
         <BuildDependencies>
-            <Dependency versionFrom="2.4">python</Dependency>
             <Dependency versionFrom="1.5.2">numarray</Dependency>
         </BuildDependencies>
     </Source>
@@ -22,15 +21,22 @@
     <Package>
         <Name>pyfits</Name>
         <RuntimeDependencies>
-            <Dependency versionFrom="2.4">python</Dependency>
             <Dependency versionFrom="1.5.2">numarray</Dependency>
         </RuntimeDependencies>
         <Files>
             <Path fileType="library">/usr/lib</Path>
+            <Path fileType="doc">/usr/share/doc</Path>
         </Files>
     </Package>
 
     <History>
+        <Update release="4">
+            <Date>2008-09-10</Date>
+            <Version>1.3</Version>
+            <Comment>Version bump, remove system.base dependencies and add documentation.</Comment>
+            <Name>Serdar Dalgıç</Name>
+            <Email>serdar@cclub.metu.edu.tr</Email>
+        </Update>
         <Update release="3">
             <Date>2007-07-12</Date>
             <Version>1.1</Version>
