--- a/2008/programming/languages/python/kiwi/pspec.xml
+++ b/2008/programming/languages/python/kiwi/pspec.xml
@@ -5,13 +5,13 @@
         <Name>kiwi</Name>
         <Homepage>http://www.async.com.br/projects/kiwi</Homepage>
         <Packager>
-            <Name>İlker Kesen</Name>
-            <Email>ikesen92@gmail.com</Email>
+            <Name>Serdar Dalgıç</Name>
+            <Email>serdar@cclub.metu.edu.tr</Email>
         </Packager>
         <License>LGPLv2</License>
         <IsA>library</IsA>
         <Summary>Pure Python framework and set of enhanced PyGTK widgets</Summary>
-        <Archive sha1sum="f82bb24a47e876a9b31be9cff95126d6b4f91a0c" type="targz">mirrors://gnome/kiwi/1.9/kiwi-1.9.19.tar.gz</Archive>
+        <Archive sha1sum="adf9283b20cd25e7e800a905cda477cf8d71688a" type="targz">mirrors://gnome/kiwi/1.9/kiwi-1.9.22.tar.gz</Archive>
         <BuildDependencies>
             <Dependency versionFrom="2.10.3">pygtk</Dependency>
         </BuildDependencies>
@@ -33,6 +33,13 @@
     </Package>
 
     <History>
+        <Update release="5">
+            <Date>2008-09-19</Date>
+            <Version>1.9.22</Version>
+            <Comment>Version bump, add examples and package takeover.</Comment>
+            <Name>Serdar Dalgıç</Name>
+            <Email>serdar@cclub.metu.edu.tr</Email>
+        </Update>
         <Update release="4">
             <Date>2008-01-31</Date>
             <Version>1.9.19</Version>
