--- a/devel/programming/languages/perl/perl-Event/pspec.xml
+++ b/devel/programming/languages/perl/perl-Event/pspec.xml
@@ -5,15 +5,15 @@
         <Name>perl-Event</Name>
         <Homepage>http://search.cpan.org/dist/Event/</Homepage>
         <Packager>
-            <Name>Gökçen Eraslan</Name>
-            <Email>gokcen@pardus.org.tr</Email>
+            <Name>Serdar Dalgıç</Name>
+            <Email>serdar@cclub.metu.edu.tr</Email>
         </Packager>
         <License>GPLv2</License>
         <License>Artistic</License>
         <IsA>library</IsA>
         <Summary>Event loop processing module in Perl</Summary>
         <Description>The Event module provide a central facility to watch for various types of events and invoke a callback when these events occur. The idea is to delay the handling of events so that they may be dispatched in priority order when it is safe for callbacks to execute.</Description>
-        <Archive sha1sum="947c1efc39a978c78400377b6f8dbe8e93ebe772" type="targz">mirrors://cpan/authors/id/J/JP/JPRIT/Event-1.10.tar.gz</Archive>
+        <Archive sha1sum="abb21f74c32c072588d27ff6ef8eae168ffb90b4" type="targz">mirrors://cpan/authors/id/J/JP/JPRIT/Event-1.11.tar.gz</Archive>
     </Source>
 
     <Package>
@@ -29,6 +29,13 @@
     </Package>
 
     <History>
+        <Update release="2">
+            <Date>2008-09-20</Date>
+            <Version>1.11</Version>
+            <Comment>Version bump and package takeover.</Comment>
+            <Name>Serdar Dalgıç</Name>
+            <Email>serdar@cclub.metu.edu.tr</Email>
+        </Update>
         <Update release="1">
             <Date>2008-01-30</Date>
             <Version>1.10</Version>
