--- a/devel/programming/languages/perl/perl-AnyEvent/pspec.xml
+++ b/devel/programming/languages/perl/perl-AnyEvent/pspec.xml
@@ -5,15 +5,15 @@
         <Name>perl-AnyEvent</Name>
         <Homepage>http://search.cpan.org/dist/AnyEvent/</Homepage>
         <Packager>
-            <Name>Gökçen Eraslan</Name>
-            <Email>gokcen@pardus.org.tr</Email>
+            <Name>Serdar Dalgıç</Name>
+            <Email>serdar@cclub.metu.edu.tr</Email>
         </Packager>
         <License>GPLv2</License>
         <License>Artistic</License>
         <IsA>library</IsA>
         <Summary>AnyEvent - provide framework for multiple event loops</Summary>
         <Description>AnyEvent provides an identical interface to multiple event loops. This allows module authors to utilise an event loop without forcing module users to use the same event loop (as only a single event loop can coexist peacefully at any one time).</Description>
-        <Archive sha1sum="7114289bde908db7d2215c6962da76f568c2dc6b" type="targz">mirrors://cpan/authors/id/M/ML/MLEHMANN/AnyEvent-2.9.tar.gz</Archive>
+        <Archive sha1sum="fbcbaac6e7d3238a1591ca2085a4249d19f87d10" type="targz">mirrors://cpan/authors/id/M/ML/MLEHMANN/AnyEvent-4.233.tar.gz</Archive>
         <BuildDependencies>
             <Dependency>perl-Event</Dependency>
         </BuildDependencies>
@@ -35,6 +35,13 @@
     </Package>
 
     <History>
+        <Update release="2">
+            <Date>2008-09-20</Date>
+            <Version>4.233</Version>
+            <Comment>Version bump and package takeover.</Comment>
+            <Name>Serdar Dalgıç</Name>
+            <Email>serdar@cclub.metu.edu.tr</Email>
+        </Update>
         <Update release="1">
             <Date>2008-01-30</Date>
             <Version>2.9</Version>
