--- a/2008/programming/languages/perl/perl-ExtUtils-PkgConfig/pspec.xml
+++ b/2008/programming/languages/perl/perl-ExtUtils-PkgConfig/pspec.xml
@@ -3,7 +3,7 @@
 <PISI>
     <Source>
         <Name>perl-ExtUtils-PkgConfig</Name>
-        <Homepage>http://search.cpan.org/~rmcfarla/ExtUtils-PkgConfig-1.07/</Homepage>
+        <Homepage>http://search.cpan.org/~tsch/ExtUtils-PkgConfig-1.11/</Homepage>
         <Packager>
             <Name>Eren Türkay</Name>
             <Email>turkay.eren@gmail.com</Email>
@@ -13,26 +13,28 @@
         <Summary>A library which converts Perl XS code into C code</Summary>
         <Description>The pkg-config program retrieves information about installed libraries, usually for the purposes of compiling against and linking to them.</Description>
         <Archive sha1sum="cc43ff17a19bbb4e63df9fffadee07bbb2efb4ae" type="targz">mirrors://sourceforge/gtk2-perl/ExtUtils-PkgConfig-1.11.tar.gz</Archive>
-        <BuildDependencies>
-            <Dependency>perl</Dependency>
-        </BuildDependencies>
     </Source>
 
     <Package>
         <Name>perl-ExtUtils-PkgConfig</Name>
-        <RuntimeDependencies>
-            <Dependency>perl</Dependency>
-        </RuntimeDependencies>
         <Replaces>
             <Package>ExtUtils-PkgConfig</Package>
         </Replaces>
         <Files>
             <Path fileType="library">/usr/lib</Path>
+            <Path fileType="doc">/usr/share/doc</Path>
             <Path fileType="man">/usr/share/man</Path>
         </Files>
     </Package>
 
     <History>
+        <Update release="3">
+            <Date>2008-09-20</Date>
+            <Version>1.11</Version>
+            <Comment>Fix homepage,remove system.base dependency perl, add documentation and package takeover.</Comment>
+            <Name>Serdar Dalgıç</Name>
+            <Email>serdar@cclub.metu.edu.tr</Email>
+        </Update>
         <Update release="2">
             <Date>2008-06-27</Date>
             <Version>1.11</Version>
