CHANGES->Changes, remove <Path fileType=data>/usr/share/perl</Path> and package takeover

--- a/devel/programming/languages/perl/perl-PadWalker/pspec.xml
+++ b/devel/programming/languages/perl/perl-PadWalker/pspec.xml
@@ -5,8 +5,8 @@
         <Name>perl-PadWalker</Name>
         <Homepage>http://search.cpan.org/dist/PadWalker</Homepage>
         <Packager>
-            <Name>Alper Somuncu</Name>
-            <Email>alpersomuncu@gmail.com</Email>
+            <Name>Serdar Dalgıç</Name>
+            <Email>serdar@cclub.metu.edu.tr</Email>
         </Packager>
         <License>Artistic</License>
         <IsA>library</IsA>
@@ -24,11 +24,17 @@
             <Path fileType="library">/usr/lib</Path>
             <Path fileType="doc">/usr/share/doc</Path>
             <Path fileType="man">/usr/share/man</Path>
-            <Path fileType="data">/usr/share/perl</Path>
         </Files>
     </Package>
 
     <History>
+        <Update release="4">
+            <Date>2008-09-20</Date>
+            <Version>1.7</Version>
+            <Comment>Minor Fixes and package takeover.</Comment>
+            <Name>Serdar Dalgıç</Name>
+            <Email>serdar@cclub.metu.edu.tr</Email>
+        </Update>
         <Update release="3">
             <Date>2008-02-10</Date>
             <Version>1.7</Version>
