opps, forgot to reorganize Files path of pspec.xml :/

--- a/devel/programming/languages/perl/perl-Lexical-Persistence/pspec.xml
+++ b/devel/programming/languages/perl/perl-Lexical-Persistence/pspec.xml
@@ -32,11 +32,17 @@
             <Path fileType="library">/usr/lib</Path>
             <Path fileType="doc">/usr/share/doc</Path>
             <Path fileType="man">/usr/share/man</Path>
-            <Path fileType="data">/usr/share/perl</Path>
         </Files>
     </Package>
 
     <History>
+        <Update release="2">
+            <Date>2008-09-20</Date>
+            <Version>0.97</Version>
+            <Comment>Reorganize Files path of pspec.</Comment>
+            <Name>Serdar Dalgıç</Name>
+            <Email>serdar@cclub.metu.edu.tr</Email>
+        </Update>
         <Update release="1">
             <Date>2007-08-29</Date>
             <Version>0.97</Version>
