--- a/devel/programming/languages/perl/perl-Getopt-Long/pspec.xml
+++ b/devel/programming/languages/perl/perl-Getopt-Long/pspec.xml
@@ -5,8 +5,8 @@
         <Name>perl-Getopt-Long</Name>
         <Homepage>http://search.cpan.org/dist/Getopt-Long</Homepage>
         <Packager>
-            <Name>Alper Somuncu</Name>
-            <Email>alpersomuncu@gmail.com</Email>
+            <Name>Serdar Dalgıç</Name>
+            <Email>serdar@cclub.metu.edu.tr</Email>
         </Packager>
         <License>Artistic</License>
         <IsA>library</IsA>
@@ -24,11 +24,17 @@
             <Path fileType="library">/usr/lib</Path>
             <Path fileType="doc">/usr/share/doc</Path>
             <Path fileType="man">/usr/share/man</Path>
-            <Path fileType="data">/usr/share/perl</Path>
         </Files>
     </Package>
 
     <History>
+        <Update release="3">
+            <Date>2008-09-20</Date>
+            <Version>2.37</Version>
+            <Comment>Reorganize Files section of pspec.xml, add examples and package takeover.</Comment>
+            <Name>Serdar Dalgıç</Name>
+            <Email>serdar@cclub.metu.edu.tr</Email>
+        </Update>
         <Update release="2">
             <Date>2007-11-23</Date>
             <Version>2.37</Version>
