Reorganize Files section of pspec.xml, reorganize translations.xml and package takeover.

--- a/devel/programming/languages/perl/perl-Term-ReadLine-Perl/pspec.xml
+++ b/devel/programming/languages/perl/perl-Term-ReadLine-Perl/pspec.xml
@@ -5,8 +5,8 @@
         <Name>perl-Term-ReadLine-Perl</Name>
         <Homepage>http://search.cpan.org/dist/Term-ReadLine-Perl</Homepage>
         <Packager>
-            <Name>Alper Somuncu</Name>
-            <Email>alpersomuncu@gmail.com</Email>
+            <Name>Serdar Dalgıç</Name>
+            <Email>serdar@cclub.metu.edu.tr</Email>
         </Packager>
         <License>Artistic</License>
         <IsA>library</IsA>
@@ -24,11 +24,17 @@
             <Path fileType="library">/usr/lib</Path>
             <Path fileType="doc">/usr/share/doc</Path>
             <Path fileType="man">/usr/share/man</Path>
-            <Path fileType="data">/usr/share/perl</Path>
         </Files>
     </Package>
 
     <History>
+        <Update release="2">
+            <Date>2008-09-20</Date>
+            <Version>1.0302</Version>
+            <Comment>Reorganize Files section of pspec.xml, reorganize translations.xml and package takeover.</Comment>
+            <Name>Serdar Dalgıç</Name>
+            <Email>serdar@cclub.metu.edu.tr</Email>
+        </Update>
         <Update release="1">
             <Date>2007-08-29</Date>
             <Version>1.0302</Version>
