--- a/devel/programming/languages/perl/perl-Term-ReadLine-Perl/translations.xml
+++ b/devel/programming/languages/perl/perl-Term-ReadLine-Perl/translations.xml
@@ -2,6 +2,6 @@
 <PISI>
     <Source>
         <Name>Term-Readline</Name>
-        <Description xml:lang="tr">Term-Readline modülü uygulamalara sanki kullanıcılar kendileri yazıyormuş gibi komut satırı girişlerini düzenleme imkanı veren işlev setini sunar.</Description>
+        <Description xml:lang="tr">Term-Readline modülü, komut satırlarının yazıldığı anda düzenlenmesini sağlayan uygulamalarda kullanılmak amacıyla bir işlev seti sunmaktadır.</Description>
     </Source>
 </PISI>
