Reorganize translations.xml and Files part of pspec.xml, package takeover.

--- a/devel/programming/languages/perl/perl-Module-Refresh/pspec.xml
+++ b/devel/programming/languages/perl/perl-Module-Refresh/pspec.xml
@@ -5,8 +5,8 @@
         <Name>perl-Module-Refresh</Name>
         <Homepage>http://search.cpan.org/dist/Module-Refresh</Homepage>
         <Packager>
-            <Name>Alper Somuncu</Name>
-            <Email>alpersomuncu@gmail.com</Email>
+            <Name>Serdar Dalgıç</Name>
+            <Email>serdar@cclub.metu.edu.tr</Email>
         </Packager>
         <License>Artistic</License>
         <IsA>library</IsA>
@@ -23,12 +23,18 @@
         <Files>
             <Path fileType="library">/usr/lib</Path>
             <Path fileType="man">/usr/share/man</Path>
-            <Path fileType="data">/usr/share/perl</Path>
             <Path fileType="doc">/usr/share/doc</Path>
         </Files>
     </Package>
 
     <History>
+        <Update release="2">
+            <Date>2008-09-20</Date>
+            <Version>0.13</Version>
+            <Comment>Reorganize translations.xml and Files part of pspec.xml, package takeover.</Comment>
+            <Name>Serdar Dalgıç</Name>
+            <Email>serdar@cclub.metu.edu.tr</Email>
+        </Update>
         <Update release="1">
             <Date>2007-08-29</Date>
             <Version>0.13</Version>
