--- a/devel/programming/languages/perl/perl-Module-Refresh/translations.xml
+++ b/devel/programming/languages/perl/perl-Module-Refresh/translations.xml
@@ -2,6 +2,6 @@
 <PISI>
     <Source>
         <Name>Module-Refresh</Name>
-        <Description xml:lang="tr">Module-Refresh kalıcı ortamlarda çalışırken, basit tekrarlanan geliştirmeleri kolayca yapmak için tasarlanmıştır.</Description>
+        <Description xml:lang="tr">Module-Refresh kalıcı ortamlarda çalışırken, bazı basit ve tekrarlanan geliştirmeleri kolayca yapmak için tasarlanmıştır.</Description>
     </Source>
 </PISI>
