--- a/2008/programming/languages/python/wxPython/pspec.xml
+++ b/2008/programming/languages/python/wxPython/pspec.xml
@@ -11,7 +11,7 @@
         <License>wxWinLL-3</License>
         <IsA>library</IsA>
         <Summary>Python bindings for wxGTK</Summary>
-        <Archive sha1sum="96027778c9d8dbfbc08a1aecb2dbe358b947b897" type="tarbz2">mirrors://sourceforge/wxpython/wxPython-src-2.8.8.1.tar.bz2</Archive>
+        <Archive sha1sum="7359af790d58082330c867f5c10f51b6382d9a35" type="tarbz2">mirrors://sourceforge/wxpython/wxPython-src-2.8.9.1.tar.bz2</Archive>
         <BuildDependencies>
             <Dependency>wxGTK</Dependency>
         </BuildDependencies>
@@ -34,6 +34,13 @@
     </Package>
 
     <History>
+        <Update release="5">
+            <Date>2008-10-07</Date>
+            <Version>2.8.9.1</Version>
+            <Comment>Stable update</Comment>
+            <Name>Fatih Aşıcı</Name>
+            <Email>fatih@pardus.org.tr</Email>
+        </Update>
         <Update release="4">
             <Date>2008-07-26</Date>
             <Version>2.8.8.1</Version>
