--- a/devel/programming/languages/perl/perl-Gtk2-Ex-FormFactory/pspec.xml
+++ b/devel/programming/languages/perl/perl-Gtk2-Ex-FormFactory/pspec.xml
@@ -5,8 +5,8 @@
         <Name>perl-Gtk2-Ex-FormFactory</Name>
         <Homepage>http://search.cpan.org/dist/Gtk2-Ex-FormFactory/</Homepage>
         <Packager>
-            <Name>Gökçen Eraslan</Name>
-            <Email>gokcen@pardus.org.tr</Email>
+            <Name>Serdar Dalgıç</Name>
+            <Email>dalgic.srdr@gmail.com</Email>
         </Packager>
         <License>GPLv2</License>
         <IsA>library</IsA>
