--- a/devel/programming/languages/perl/perl-Test-Simple/pspec.xml
+++ b/devel/programming/languages/perl/perl-Test-Simple/pspec.xml
@@ -5,8 +5,8 @@
         <Name>perl-Test-Simple</Name>
         <Homepage>http://search.cpan.org/dist/Test-Simple/</Homepage>
         <Packager>
-            <Name>Gökçen Eraslan</Name>
-            <Email>gokcen@pardus.org.tr</Email>
+            <Name>Serdar Dalgıç</Name>
+            <Email>dalgic.srdr@gmail.com</Email>
         </Packager>
         <License>GPLv2</License>
         <License>Artistic</License>
