--- a/devel/programming/languages/perl/perl-libintl/pspec.xml
+++ b/devel/programming/languages/perl/perl-libintl/pspec.xml
@@ -5,8 +5,8 @@
         <Name>perl-libintl</Name>
         <Homepage>http://search.cpan.org/dist/libintl-perl/</Homepage>
         <Packager>
-            <Name>Gökçen Eraslan</Name>
-            <Email>gokcen@pardus.org.tr</Email>
+            <Name>Serdar Dalgıç</Name>
+            <Email>dalgic.srdr@gmail.com</Email>
         </Packager>
         <License>LGPLv2.1</License>
         <IsA>library</IsA>
