Take away unmaintained packages // rest

--- a/devel/programming/languages/java/xerces-j/pspec.xml
+++ b/devel/programming/languages/java/xerces-j/pspec.xml
@@ -5,10 +5,10 @@
         <Name>xerces-j</Name>
         <Homepage>http://xerces.apache.org/xerces-j</Homepage>
         <Packager>
-            <Name>Alper Somuncu</Name>
-            <Email>alpersomuncu@gmail.com</Email>
+            <Name>Pardus</Name>
+            <Email>admins@pardus.org.tr</Email>
         </Packager>
-        <License>Apache 2.0</License>
+        <License>Apache-2.0</License>
         <Summary>Validating XML parser for Java with DOM level 3 support</Summary>
         <Description>The next generation of high performance, fully compliant XML parsers in the Apache Xerces family</Description>
         <Archive sha1sum="78786a120c10b3d7079384cecbd2860260e47445" type="targz">mirrors://apache/xerces/j/Xerces-J-src.2.9.1.tar.gz</Archive>
