--- a/devel/programming/languages/scheme/mit-scheme/pspec.xml
+++ b/devel/programming/languages/scheme/mit-scheme/pspec.xml
@@ -5,10 +5,10 @@
         <Name>mit-scheme</Name>
         <Homepage>http://www.gnu.org/software/mit-scheme/</Homepage>
         <Packager>
-            <Name>Murat ONGAN</Name>
-            <Email>mongan@cclub.metu.edu.tr</Email>
+            <Name>Pardus</Name>
+            <Email>admins@pardus.org.tr</Email>
         </Packager>
-        <License>GPL</License>
+        <License>GPLv3</License>
         <IsA>app:console</IsA>
         <Summary>MIT/GNU Scheme is an implementation of the Scheme programming language</Summary>
         <Archive sha1sum="824001434b65065f4ad11b3715ffbe8dd9411327" type="tarbz2">http://www.ceng.metu.edu.tr/~e1449008/pardus/mit-scheme-7.7.1.tar.bz2</Archive>
