--- a/devel/programming/languages/php/xdebug/pspec.xml
+++ b/devel/programming/languages/php/xdebug/pspec.xml
@@ -5,8 +5,8 @@
         <Name>xdebug</Name>
         <Homepage>http://www.xdebug.org</Homepage>
         <Packager>
-            <Name>Fatih Aşıcı</Name>
-            <Email>fatih@pardus.org.tr</Email>
+            <Name>Pardus</Name>
+            <Email>admins@pardus.org.tr</Email>
         </Packager>
         <License>Xdebug</License>
         <IsA>library</IsA>
