--- a/devel/programming/languages/python/ElementTree/pspec.xml
+++ b/devel/programming/languages/python/ElementTree/pspec.xml
@@ -5,8 +5,8 @@
         <Name>ElementTree</Name>
         <Homepage>http://effbot.org/zone/element-index.htm</Homepage>
         <Packager>
-            <Name>Murat Şenel</Name>
-            <Email>muratasenel@gmail.com</Email>
+            <Name>Pardus</Name>
+            <Email>admins@pardus.org.tr</Email>
         </Packager>
         <License>ElementTree</License>
         <IsA>library</IsA>
