--- a/devel/programming/languages/python/python-xlrd/pspec.xml
+++ b/devel/programming/languages/python/python-xlrd/pspec.xml
@@ -5,8 +5,8 @@
         <Name>python-xlrd</Name>
         <Homepage>http://www.lexicon.net/sjmachin/xlrd.htm</Homepage>
         <Packager>
-            <Name>Ekrem SEREN</Name>
-            <Email>ekrem.seren@gmail.com</Email>
+            <Name>Pardus</Name>
+            <Email>admins@pardus.org.tr</Email>
         </Packager>
         <License>BSD</License>
         <IsA>library</IsA>
