Another bunch of unmaintained packages // programming component

--- a/devel/programming/languages/python/pyMbus/pspec.xml
+++ b/devel/programming/languages/python/pyMbus/pspec.xml
@@ -5,10 +5,10 @@
         <Name>pyMbus</Name>
         <Homepage>http://www.mbus.org/app.html</Homepage>
         <Packager>
-            <Name>Murat Şenel</Name>
-            <Email>muratasenel@gmail.com</Email>
+            <Name>Pardus</Name>
+            <Email>admins@pardus.org.tr</Email>
         </Packager>
-        <License>GPL-2</License>
+        <License>GPLv2</License>
         <IsA>library</IsA>
         <Summary>The local Message Bus (Mbus) is a light-weight message-oriented coordination protocol for group communication between application components</Summary>
         <Description>The local Message Bus (Mbus) is a light-weight message-oriented coordination protocol for group communication between application components</Description>
