--- a/devel/programming/languages/python/pyNotifier/pspec.xml
+++ b/devel/programming/languages/python/pyNotifier/pspec.xml
@@ -5,10 +5,10 @@
         <Name>pyNotifier</Name>
         <Homepage>http://www.mbus.org/app.html</Homepage>
         <Packager>
-            <Name>Murat Şenel</Name>
-            <Email>muratasenel@gmail.com</Email>
+            <Name>Pardus</Name>
+            <Email>admins@pardus.org.tr</Email>
         </Packager>
-        <License>GPL</License>
+        <License>GPLv2</License>
         <IsA>library</IsA>
         <Summary>pyNotifier is a notifier/event scheduler abstraction written in python</Summary>
         <Description>pyNotifier is a notifier/event scheduler abstraction written in python</Description>
