--- a/devel/programming/languages/python/pytextile/pspec.xml
+++ b/devel/programming/languages/python/pytextile/pspec.xml
@@ -5,8 +5,8 @@
         <Name>pytextile</Name>
         <Homepage>http://cheeseshop.python.org/pypi/textile</Homepage>
         <Packager>
-            <Name>Murat Şenel</Name>
-            <Email>muratasenel@gmail.com</Email>
+            <Name>Pardus</Name>
+            <Email>admins@pardus.org.tr</Email>
         </Packager>
         <License>freedist</License>
         <IsA>library</IsA>
