--- a/devel/programming/languages/python/python2-biggles/pspec.xml
+++ b/devel/programming/languages/python/python2-biggles/pspec.xml
@@ -5,8 +5,8 @@
         <Name>python2-biggles</Name>
         <Homepage>http://biggles.sourceforge.net/</Homepage>
         <Packager>
-            <Name>Ayan Öztürk</Name>
-            <Email>ayanozturk@gmail.com</Email>
+            <Name>Pardus</Name>
+            <Email>admins@pardus.org.tr</Email>
         </Packager>
         <License>GPLv2</License>
         <IsA>library</IsA>
