--- a/devel/programming/languages/python/SilverCity/pspec.xml
+++ b/devel/programming/languages/python/SilverCity/pspec.xml
@@ -5,8 +5,8 @@
         <Name>SilverCity</Name>
         <Homepage>http://silvercity.sourceforge.net</Homepage>
         <Packager>
-            <Name>Murat Şenel</Name>
-            <Email>muratasenel@gmail.com</Email>
+            <Name>Pardus</Name>
+            <Email>admins@pardus.org.tr</Email>
         </Packager>
         <License>BSD</License>
         <IsA>library</IsA>
