--- a/devel/programming/languages/python/cython/pspec.xml
+++ b/devel/programming/languages/python/cython/pspec.xml
@@ -5,10 +5,10 @@
         <Name>cython</Name>
         <Homepage>http://www.cython.org</Homepage>
         <Packager>
-            <Name>Ahmet Erdoğan</Name>
-            <Email>tuxposta@gmail.com</Email>
+            <Name>Pardus</Name>
+            <Email>admins@pardus.org.tr</Email>
         </Packager>
-        <License>Python</License>
+        <License>PYTHON</License>
         <IsA>library</IsA>
         <Summary>C extensions for the Python</Summary>
         <Description>Cython is a language that makes writing C extensions for the Python language as easy as Python itself.</Description>
