Ugur Cetin drops some packages

--- a/devel/programming/languages/python/pygtkglext/pspec.xml
+++ b/devel/programming/languages/python/pygtkglext/pspec.xml
@@ -5,10 +5,10 @@
         <Name>pygtkglext</Name>
         <Homepage>http://www.k-3d.org/gtkglext</Homepage>
         <Packager>
-            <Name>Uğur Çetin</Name>
-            <Email>jnmbk@users.sourceforge.net</Email>
+            <Name>Pardus</Name>
+            <Email>admins@pardus.org.tr</Email>
         </Packager>
-        <License>GPL-2</License>
+        <License>GPLv2</License>
         <IsA>library</IsA>
         <Summary>Python bindings for GtkGLext</Summary>
         <Description>GtkGLExt is an OpenGL extension to GTK+. It provides additional GDK objects which support OpenGL rendering in GTK+, and GtkWidget API add-ons to make GTK+ widgets OpenGL-capable.</Description>
