--- a/devel/programming/languages/python/PyOpenGL/pspec.xml
+++ b/devel/programming/languages/python/PyOpenGL/pspec.xml
@@ -5,8 +5,8 @@
         <Name>PyOpenGL</Name>
         <Homepage>http://pyopengl.sourceforge.net/</Homepage>
         <Packager>
-            <Name>Uğur Çetin</Name>
-            <Email>jnmbk@users.sourceforge.net</Email>
+            <Name>Pardus</Name>
+            <Email>admins@pardus.org.tr</Email>
         </Packager>
         <License>GPLv2</License>
         <IsA>library</IsA>
