--- a/devel/programming/languages/lisp/sbcl/pspec.xml
+++ b/devel/programming/languages/lisp/sbcl/pspec.xml
@@ -5,8 +5,8 @@
         <Name>sbcl</Name>
         <Homepage>http://sbcl.sourceforge.net/</Homepage>
         <Packager>
-            <Name>Nicolas E. Lara G.</Name>
-            <Email>nicolaslara@gmail.com</Email>
+            <Name>Pardus</Name>
+            <Email>admins@pardus.org.tr</Email>
         </Packager>
         <License>MIT</License>
         <IsA>app:console</IsA>
