--- a/devel/programming/languages/python/gst-python/pspec.xml
+++ b/devel/programming/languages/python/gst-python/pspec.xml
@@ -5,8 +5,8 @@
         <Name>gst-python</Name>
         <Homepage>http://gstreamer.freedesktop.org/modules/gst-python.html</Homepage>
         <Packager>
-            <Name>Nicolas E. Lara G.</Name>
-            <Email>nicolaslara@gmail.com</Email>
+            <Name>Pardus</Name>
+            <Email>admins@pardus.org.tr</Email>
         </Packager>
         <License>LGPLv2.1</License>
         <IsA>library</IsA>
