--- a/devel/programming/languages/python/nltk/pspec.xml
+++ b/devel/programming/languages/python/nltk/pspec.xml
@@ -5,10 +5,10 @@
         <Name>nltk</Name>
         <Homepage>http://nltk.sourceforge.net/index.php/Main_Page</Homepage>
         <Packager>
-            <Name>Nicolas E. Lara G.</Name>
-            <Email>nicolaslara@gmail.com</Email>
+            <Name>Pardus</Name>
+            <Email>admins@pardus.org.tr</Email>
         </Packager>
-        <License>Creative Commons Attribution-ShareAlike 2.5</License>
+        <License>CCPL-Attribution-ShareAlike-2.5</License>
         <IsA>library</IsA>
         <Summary>The data for the Natural Language Toolkit for Python</Summary>
         <Description>
